publishing updated develop sources